package com.ab.strategy;

public class Client {

	public static void main(String[] args) {
		// TODO Auto-generated method stub
		//����
	}

}
